# computer-architecture-labs

./: .gitlab-ci.yml  CMakeLists.txt  check_cache.sh  readme.md  run_tests.sh
backend/: backend.cpp  backend_commit.cpp  backend_wc.cpp  execute_pipeline.cpp  load_buffer.cpp  rob.cpp  store_buffer.cpp
cache/: cache.cpp
cache-exp/: associativity.cpp  block_size.cpp  cache_size.cpp  matmul.cpp  replace_type.cpp  write_policy.cpp
checkfiles/: cache_spec.chk
common/: instructions.cpp  logger.cpp  masked_literal.cpp  memory.cpp  processor.cpp  processor_wc.cpp  processor_wp.cpp  register_file.cpp  runner.cpp  utils.cpp
frontend/: frontend_base.cpp  frontend_wp.cpp
include/: branch_predict_model.h  cache-exp.h  cache.h  csr.h  defines.h  instructions.h  issue_slot.h  load_buffer.h  logger.h  masked_literal.h  mem.h  processor.h  register_file.h  reservation_station.hpp  rob.h  runner.h  store_buffer.h  with_cache.h  with_predict.h
program/: cache_checker.cpp  cache_test.cpp  checker.cpp  elf_test.cpp  instruction_test.cpp  processor_test.cpp
test/: baseline_matmul.cpp  mytest.cpp  sample_associativity.cpp  sample_block_size.cpp  sample_cache_matmul.cpp  sample_cache_size.cpp
